[package]
name = "spatial_visualisation_test"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.27"
rusttype = { version= "0.9.3" , features = ["gpu_cache"] }
image = { version = "0.23", default-features = false, features = ["png","jpeg"] }
rand = "0.8.5"